--- a/car_collection/templates/base.html
+++ b/car_collection/templates/base.html
@@ -23,7 +23,7 @@
     <div>
         <ul id="horizontal-list">  
             <a href="{{ url_for('site.home') }}">
-                <li>The Coding Drones Project</li>
+                <li>The Car Collection Project</li>
             </a>
             <a href="{{ url_for('site.home') }}">
                 <li>Donate</li>
